# Unix_server

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
test/: accept_connection.c  initialize_socket.c  main.c  process_command.c  receive_data.c  send_data.c  shutdown_server.c
unix_socket/: unix_socket.c  unix_socket.h
